# multiworld-causal-subsidy

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
docs/: methodology.md  multiworld_vs_ab_test.md  resume_project.md  resume_project_expanded.md  resume_project_v5.md  technical_paper.md
notebooks/: demo.ipynb
scripts/: diagnose_chain_gtv.py  generate_notebook.py  generate_report_figures.py  preprocess_mt_lift.py  run_all_demos.py  run_behavior_chain.py  run_causalml_comparison.py  run_llm_agent.py  run_mesa_simulation.py  run_mt_lift_benchmark.py  run_network_contagion.py  run_online_kernel_update.py  validate_behavioral_kernel.py  verify_chain_fix.py  verify_chain_roi_full.py  verify_merchant_prototype.py
src/: __init__.py
src/evaluation/: __init__.py  metrics.py
src/features/: __init__.py  data_generator.py
src/modeling/: __init__.py  causalml_wrapper.py  dowhy_causal_graph.py  mediation_analyzer.py  multi_outcome_cate.py  psm_matcher.py
src/pipeline/: __init__.py  causal_simulation_pipeline.py
src/simulation/: __init__.py  behavioral_kernel.py  cognitive_agent_theory.py  kernel_online_updater.py  llm_agent.py  merchant_prototype.py  mesa_agent_model.py  network_contagion.py
tests/: test_pipeline.py
